R190 self-review: address findings 1-5 from principles-architect review
- Finding 1 (classifier caching): GraphitronSchema now carries
  ContextArgumentClassifier.Classification as a 6th component, populated
  once in the constructor. GraphitronSchemaValidator and
  GraphitronFacadeGenerator both read schema.contextArguments() instead of
  re-running the classifier. Restores the "single producer" framing the
  load-bearing-classifier doc promised.

- Finding 2 (dead param): drop the unused graphitronContextCall parameter
  from DataLoaderFetcherEmitter.build (leftover from the tenant-prefix
  era), update its 3 call sites in TypeFetcherGenerator, fix the stale
  "tenant prefix" javadoc on buildDataLoaderName.

- Finding 3 (CallParam asymmetry): lift TypeName javaType onto CallParam
  as a 5th component, threaded from MethodRef.Param.Typed.javaType via
  MethodRef.callParams(). ArgCallEmitter's rawTypeOfCallParam collapses to
  the same one-liner rawTypeOf uses; both Context arms now read identical
  structural data rather than the CallParam arm round-tripping through
  ClassName.bestGuess. Existing 4-arg construction sites (body params,
  tests) keep working via a convenience ctor that derives javaType from
  the string typeName.

- Finding 4 (body-string asserts): delete the
  factory_bodyNullChecksEveryParameterAndPopulatesGraphQLContext method
  on GraphitronFacadeGeneratorPipelineTest. Behaviour is covered by L5
  compile + L6 round-trip; the structural-shape test stays.

- Finding 5 (Class<T> at the wrong layer): drop the expectedType slot from
  GraphitronContext.getContextArgument; the Java cast moves to the
  generated call site (`(String) graphitronContext(env).getContextArgument(env, "userId")`).
  The singleton's prose throw on missing-value stays (server-log surface
  only; the typed factory's parameter list is the load-bearing
  diagnostic). Updates the unit-tier
  GraphitronContextInterfaceGeneratorTest, the L6
  FilmContextArgumentRoundTripTest, and f